# cura-backend

./: .gitignore  .gitmodules  Procfile  README.md  build.sh  pyproject.toml  run_crons.sh  settings.py  start.sh
core_backend/: db.sqlite3  urls.py
core_backend/api/: views.py
core_backend/core_backend/: settings.py  urls.py  views.py
core_backend/diet_agent/: apps.py  models.py  urls.py  views.py
core_backend/diet_agent/migrations/: 0001_initial.py  0002_initial.py
core_backend/reminder_agent/: apps.py  cron.py  models.py  urls.py  views.py
core_backend/reminder_agent/migrations/: 0001_initial.py  0002_initial.py  0003_reminder_instruction_reminder_quantity.py
core_backend/users/: models.py  urls.py  views.py
core_backend/users/migrations/: 0001_initial.py
docs/: agent.md  api.md  schema.md
testing/: test_endpoints.py
