[tool.poetry]
name = "ibm-backend"
version = "0.1.0"
description = "handles authentication, endpoints."
authors = ["abhay-byte <abhay02delhi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
