[tool.poetry]
name = "ibm-backend"
version = "0.1.0"
description = "handles authentication, endpoints."
authors = ["abhay-byte <abhay02delhi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
langchain-google-genai = "^2.1.9"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
requests = "^2.32.4"
django-cron = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
